<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Nearest MRT</string>
    <string name="action_settings">Settings</string>
    
    <string name="label_nearestmrt_location">Nearest MRT:</string>
    <string name="label_current_location">Current Location:</string>
    <string name="label_walking_dis">Walking distance:</string>
    <string name="label_walking_time">Walking time:</string>
    <string name="loading">"Loading &#8230; Please wait!"</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="str_btn_find">Find</string>
    <string name="about">Copyrights &#169; Fuzzybee7</string>
    <string name="menu_item_home">Home</string>
    <string name="menu_item_about">About</string>
    <string name="menu_item_refresh">Refresh</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="label_walking_dir">Suggested walking direction</string>
    
    <!-- App requirements dialog -->
    <string name="msg_requirements">This app requires Internet connection and Location Services to work. Please turn them on!</string>
    <string name="btn_on_internet">Turn on Internet</string>
    <string name="btn_on_loc_services">Enable Location Services</string>
    
    <string name="btn_map_view">Map</string>
	<string name="btn_satellite_view">Satellite</string>    
    
    <!-- Google demo -->
    <!-- Application identifiers -->
    
    <string name="app_tag">LocationUpdates</string>
    <string name="app_description">
        Displays current address and current or updated location using Location Services
    </string>

    <!-- User interface labels and strings -->

    <!-- Address format -->
    <string name="address_output_string">%1$s %2$s %3$s</string>

    <!-- Latitude, longitude format -->
    <string name="latitude_longitude">%1$.8f, %2$.8f</string>

    <!-- Labels -->
    <string name="latlng">Lat/Long:</string>
    <string name="address">Address:</string>

    <!-- Messages -->
    <string name="connected">Client connected</string>
    <string name="connection_error_code_unknown">Unknown connection error code:  %1$d</string>
    <string name="connection_failed">Connection failed</string>
    <string name="disconnected">Client disconnected</string>
    <string name="get_address">Get Address</string>
    <string name="get_location">Get Location</string>
    <string name="illegal_argument_exception">
        Illegal arguments: Latitude %1$.8f Longitude %2$.8f
    </string>
    <string name="invalid_action">Invalid intent action %1$s</string>
    <string name="invalid_integer_id">Invalid integer request ID: %1$s</string>
    <string name="IO_Exception_getFromLocation">IO Exception in Geocoder.getFromLocation()</string>
    <string name="location_requested">Periodic updates requested</string>
    <string name="location_updated">Location updated</string>
    <string name="location_update_error">Location update failed</string>
    <string name="location_update_error_detail">
        Location update error. code %1$d message %2$s
    </string>
    <string name="location_update_missing_update">
        Location update error. No incoming location.
    </string>
    <string name="location_updates_stopped">Periodic updates stopped</string>
    <string name="log_new_location">New location: %1$s</string>
    <string name="no_address_found">No address found for location</string>
    <string name="no_connection">No connection: Cannot request location</string>
    <string name="no_geocoder_available">Cannot get address. No geocoder available.</string>
    <string name="no_location_available">Location not available</string>
    <string name="resolved">Error resolved. Please re-try operation.</string>
    <string name="no_resolution">Google Play services: unable to resolve connection error.</string>
    <string name="periodic_update_stop">Stopping periodic updates</string>
    <string name="play_services_available">Google Play services is available</string>
    <string name="request_location_updates_in_progress">
        Can\'t request location updates, previous request hasn\'t finished
    </string>
    <string name="start_updates">Start Updates</string>
    <string name="stop_updates">Stop Updates</string>
    <string name="unknown">--Unknown--</string>
    <string name="unknown_activity_request_code">
        Received an unknown activity request code %1$d in onActivityResult.
    </string>
    

</resources>